syntax = "proto3";

option go_package = "github.com/erkrnt/symphony/api";

package api;

import "api/generic.proto";

service BlockControl {
  rpc Init(BlockControlInitRequest) returns (BlockControlInitResponse) {}
}

service BlockRemote {
  rpc Leave(BlockRemoteLeaveRequest) returns (SuccessStatusResponse) {}

  rpc GetLv(BlockRemoteLvRequest) returns (BlockRemoteLvResponse) {}
  rpc GetPv(BlockRemotePvRequest) returns (BlockRemotePvResponse) {}
  rpc GetVg(BlockRemoteVgRequest) returns (BlockRemoteVgResponse) {}
  rpc NewLv(BlockRemoteNewLvRequest) returns (BlockRemoteLvResponse) {}
  rpc NewPv(BlockRemotePvRequest) returns (BlockRemotePvResponse) {}
  rpc NewVg(BlockRemoteNewVgRequest) returns (BlockRemoteVgResponse) {}
  rpc RemoveLv(BlockRemoteLvRequest) returns (SuccessStatusResponse) {}
  rpc RemovePv(BlockRemotePvRequest) returns (SuccessStatusResponse) {}
  rpc RemoveVg(BlockRemoteVgRequest) returns (SuccessStatusResponse) {}
}

message BlockControlInitRequest { string ServiceAddr = 1; }
message BlockControlInitResponse {
  string ClusterID = 1;
  string ServiceID = 2;
}

message BlockRemoteLeaveRequest { string ServiceID = 1; }

message BlockRemoteLvRequest {
  string ID = 1;
  string VolumeGroupID = 2;
}

message BlockRemotePvRequest { string Device = 1; }

message BlockRemoteVgRequest { string ID = 1; }

message BlockRemoteNewLvRequest {
  string ID = 1;
  string VolumeGroupID = 2;
  string Size = 3;
}

message BlockRemoteNewVgRequest {
  string Device = 1;
  string ID = 2;
}

message BlockRemoteLvResponse {
  string LvName = 1;
  string VgName = 2;
  string LvAttr = 3;
  string LvSize = 4;
  string PoolLv = 5;
  string Origin = 6;
  string DataPercent = 7;
  string MetadataPercent = 8;
  string MovePv = 9;
  string MirrorLog = 10;
  string CopyPercent = 11;
  string ConvertLv = 12;
}

message BlockRemotePvResponse {
  string PvName = 1;
  string VgName = 2;
  string PvFmt = 3;
  string PvAttr = 4;
  string PvSize = 5;
  string PvFree = 6;
}

message BlockRemoteVgResponse {
  string VgName = 1;
  string PvCount = 2;
  string LvCount = 3;
  string SnapCount = 4;
  string VgAttr = 5;
  string VgSize = 6;
  string VgFree = 7;
}

message PhysicalVolume {
  string DeviceName = 1;
  PhysicalVolumeMetadata Metadata = 2;
  string ServiceID = 3;
}

message PhysicalVolumeMetadata {
  string PvName = 1;
  string VgName = 2;
  string PvFmt = 3;
  string PvAttr = 4;
  string PvSize = 5;
  string PvFree = 6;
}